# flash-attention-cpp

./: .gitignore  CMakeLists.txt  README.md  api.cpp  build.sh  fa_api.h  main.cpp  test.bat  test.py
fa/: flash.h  flash_fwd_kernel.h  flash_fwd_launch_template.h  static_switch.h
test-flash-attn/: CMakeLists.txt  flash_llama.h  main.cpp  main.cu  main.h  util.h
